--- a/index.html
+++ b/index.html
@@ -9,17 +9,55 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
+    <head>
+      <h1>We will learn HTML & CSS</h1>
+    </head>
+
     <main>
-      <div class="intro"></div>
+      <div class="intro">
+        <h2>html and css are the building blocks of the internet</h2>
+
+        <p>
+          magna fringilla urna porttitor rhoncus dolor purus. Malesuada bibendum
+          arcu vitae elementum. Purus sit amet volutpat consequat.
+        </p>
+      </div>
 
       <div class="my-skills">
-        <div class="columns">
-          <div class="column"></div>
-          <div class="column"></div>
-        </div>
-      </div>
-    </main>
+        <h2>im really good at a bunch of stuff</h2>
 
-    <script src="" async defer></script>
+        <div class="columns">
+          <!-- column 1-->
+
+          <div class="column">
+            <h3>HTML</h3>
+            <p>
+              Magna fringilla urna porttitor rhoncus dolor purus. Malesuada
+              bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
+            </p>
+          </div>
+
+          <!--Column 2-->
+          <div class="column">
+            <h3>CSS</h3>
+            <p>
+              Magna fringilla urna porttitor rhoncus dolor purus. Malesuada
+              bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
+            </p>
+          </div>
+
+          <!--  column 3-->
+          <div class="column">
+            <h3>And more!</h3>
+            <p>
+              Magna fringilla urna porttitor rhoncus dolor purus. Malesuada
+              bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
+            </p>
+          </div>
+        </div>
+        <!-- /columns-->
+      </div>
+      <!-- /my skills end-->
+    </main>
   </body>
 </html>
