--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
-    <head>
+    <header>
       <h1>We will learn HTML & CSS</h1>
-    </head>
+    </header>
 
     <main>
       <div class="intro">
