--- a/index_2.html
+++ b/index_2.html
@@ -23,7 +23,9 @@
       </div>
 
       <div class="my-skills">
+        <!-- this has a background-->
         <div class="columns">
+          <!-- width, centered, and flex to make columns -->
           <!-- column 1 -->
           <div class="column">
             <h3>HTML</h3>
