--- a/index_2.html
+++ b/index_2.html
@@ -9,16 +9,27 @@
   </head>
   <body>
     <header>
-      <h1>Im learning HTML and CSS</h1>
+      <h1>Battle of the Devices</h1>
     </header>
 
     <main>
       <div class="intro">
-        <h2>HTML and CSS are the building blocks of the internet</h2>
+        <h2>Iphone vs Android</h2>
 
         <p>
-          Magna fringilla urna porttitor rhoncus dolor purus. Malesuada bibendum
-          arcu vitae elementum. Purus sit amet volutpat consequat.
+          A long time ago in a galaxy far, far away the battle between iPhone
+          and Android devices began. Seemingly at the beginning of time. In
+          other words, 2008.
+        </p>
+        <p>
+          Almost a dozen years ago! Like all great battles, people have chosen
+          sides, they’ve stood their ground, they’ll fight to prove their phone
+          is best.
+        </p>
+        <p>
+          With the release of our Android version of TaxBird (cough, cough, tell
+          your friends, cough), we thought it would be interesting to take a
+          deeper look at iPhone and Android to see which reigns supreme.
         </p>
       </div>
 
@@ -28,31 +39,63 @@
           <!-- width, centered, and flex to make columns -->
           <!-- column 1 -->
           <div class="column">
-            <h3>HTML</h3>
-            <p>
-              Magna fringilla urna porttitor rhoncus dolor purus. Malesuada
-              bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
-            </p>
+            <h3>iOS</h3>
+
+            <ol>
+              <ul>
+                iOS is a more secure operating system
+              </ul>
+              <ul>
+                Android has a fragmented OS which makes the development harder.
+              </ul>
+              <ul>
+                As iOS is consistent across all Apple devices and easier to
+                update whenever a new update is released, iOS is better than
+                Android in this aspect
+              </ul>
+            </ol>
           </div>
 
           <!-- column 2 -->
 
           <div class="column">
-            <h3>CSS</h3>
-            <p>
-              Magna fringilla urna porttitor rhoncus dolor purus. Malesuada
-              bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
-            </p>
+            <h3>Android</h3>
+            <ol>
+              <ul>
+                Android beats iOS because it provides more flexibility,
+                functionality, and freedom of choice
+              </ul>
+              <ul>
+                Android has an 86.7% share of the global mobile market versus a
+                13.3% share by iOS.
+              </ul>
+              <ul>
+                Android’s win simply because the iPhone does not allow upgrading
+                the storage space.
+              </ul>
+            </ol>
           </div>
 
           <!-- column 3 -->
 
           <div class="column">
-            <h3>And More!</h3>
-            <p>
-              Magna fringilla urna porttitor rhoncus dolor purus. Malesuada
-              bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
-            </p>
+            <h3>Similarities!</h3>
+            <ol>
+              <ul>
+                Both the iOS and Android phones have calling, messaging, web
+                browsing, video chat, maps, voice commands etc
+              </ul>
+              <ul>
+                Privacy settings are paramount in both iOS and Android. Users
+                are presented with app permissions as this lessens the risk of
+                data leakage.
+              </ul>
+              <ul>
+                4G cellular network can be enjoyed on both the iOS and Android
+                devices. This is very important as cellular network is crucial
+                for internet surfing.
+              </ul>
+            </ol>
           </div>
         </div>
         <!-- / columns -->
