--- a/index_2.html
+++ b/index_2.html
@@ -34,6 +34,35 @@
         </p>
       </div>
 
+      <!--SLIDE SHOW-->
+
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 3</div>
+          <img src="./CSS/interface.png" style="width: 100%" />
+          <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 3</div>
+          <img src="./CSS/boffum.jpg" style="width: 100%" />
+          <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 3</div>
+          <img src="./CSS/both.jpg" style="width: 100%" />
+          <div class="text">Caption Three</div>
+        </div>
+      </div>
+      <br />
+
+      <div style="text-align: center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+
       <div class="my-skills">
         <!-- this has a background-->
         <div class="columns">
@@ -104,35 +133,6 @@
       <!-- / my-skills -->
     </main>
 
-    <!--SLIDE SHOW-->
-
-    <p>Change image every 2 seconds:</p>
-
-    <div class="slideshow-container">
-      <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="./CSS/interface.png" style="width: 100%" />
-        <div class="text">Caption Text</div>
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="./CSS/boffum.jpg" style="width: 100%" />
-        <div class="text">Caption Two</div>
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="./CSS/both.jpg" style="width: 100%" />
-        <div class="text">Caption Three</div>
-      </div>
-    </div>
-    <br />
-
-    <div style="text-align: center">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-    </div>
+    <script src="./JS/manifest.js"></script>
   </body>
 </html>
