--- a/index_2.html
+++ b/index_2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>html & css</title>
+    <title>iOS vs Droid</title>
 
     <link rel="stylesheet" href="./CSS/NewStyle.css" />
   </head>
